--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - "./docker/dynamodb:/home/dynamodblocal/data"
+      - "./docker-volumes/dynamodb:/home/dynamodblocal/data"
     working_dir: /home/dynamodblocal
 
   api:
