--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "4566:4566"
     environment:
-      - SERVICES=dynamodb
+      - SERVICES=dynamodb,lambda,s3,cloudformation,iam
       - DEBUG=1
       - PERSISTENCE=1
     volumes:
