--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     ports:
       - "4566:4566"
     environment:
-      - SERVICES=dynamodb,lambda,s3,cloudformation,iam
-      - DEBUG=1
+      - SERVICES=dynamodb,lambda,s3,cloudformation,iam,logs
+      - DEBUG=0
       - PERSISTENCE=1
     volumes:
       - "./docker-volumes/localstack:/var/lib/localstack"
