--- a/infrastructure/cloudformation.yml
+++ b/infrastructure/cloudformation.yml
@@ -22,8 +22,8 @@ Resources:
         WriteCapacityUnits: 10000
       StreamSpecification:
         StreamEnabled: true
-        StreamViewType: NEW_AND_OLD_IMAGES 
-        
+        StreamViewType: NEW_AND_OLD_IMAGES
+
   LambdaExecutionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -57,9 +57,10 @@ Resources:
       Handler: index.handler
       Runtime: nodejs16.x
       Role: !GetAtt LambdaExecutionRole.Arn
+      MemorySize: 128
       Code:
-        S3Bucket: localstack-lambda-artifacts  # LocalStack will intercept this
-        S3Key: service-counter/index.zip      # Path where your code will be packaged
+        S3Bucket: localstack-lambda-artifacts # LocalStack will intercept this
+        S3Key: service-counter/index.zip # Path where your code will be packaged
       Timeout: 50
 
   ServiceCounterEventSourceMapping:
@@ -69,4 +70,4 @@ Resources:
       Enabled: true
       EventSourceArn: !GetAtt DistributedCounterTable.StreamArn
       FunctionName: !GetAtt ServiceCounterFunction.Arn
-      StartingPosition: TRIM_HORIZON 
+      StartingPosition: TRIM_HORIZON
