--- a/infrastructure/cloudformation.yml
+++ b/infrastructure/cloudformation.yml
@@ -49,7 +49,7 @@ Resources:
                   - dynamodb:DescribeStream
                   - dynamodb:ListStreams
                   - dynamodb:UpdateItem
-                Resource: 
+                Resource:
                   - !GetAtt DistributedCounterTable.StreamArn
                   - !GetAtt DistributedCounterTable.Arn
 
@@ -58,15 +58,16 @@ Resources:
     Properties:
       FunctionName: service-counter
       Handler: index.handler
-      Runtime: nodejs16.x
+      Runtime: nodejs22.x
       Role: !GetAtt LambdaExecutionRole.Arn
-      MemorySize: 2048
+      MemorySize: 4096
+      ReservedConcurrentExecutions: 8 # Limits concurrent executions to 8
       Environment:
         Variables:
           TABLE_NAME: !Ref DistributedCounterTable
       Code:
         S3Bucket: localstack-lambda-artifacts # LocalStack will intercept this
-        S3Key: service-counter/index.zip # Path where your code will be packaged
+        S3Key: service-counter/index.zip # Path where the lambda is packaged
       Timeout: 50
 
   ServiceCounterEventSourceMapping:
@@ -81,4 +82,4 @@ Resources:
         - ReportBatchItemFailure
       FilterCriteria:
         Filters:
-          - Pattern: '{"dynamodb":{"Keys":{"SK":{"S":[{"prefix":"SERVICE#"}]}}}}' # Only process events with SK starting with SERVICE#
+          - Pattern: '{"eventName":["INSERT","MODIFY"],"dynamodb":{"Keys":{"SK":{"S":[{"prefix":"SERVICE#"}]}}}}'
