--- a/infrastructure/cloudformation.yml
+++ b/infrastructure/cloudformation.yml
@@ -53,33 +53,64 @@ Resources:
                   - !GetAtt DistributedCounterTable.StreamArn
                   - !GetAtt DistributedCounterTable.Arn
 
-  ServiceCounterFunction:
+  ServiceInsertCounterFunction:
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: service-counter
+      FunctionName: service-insert-counter
       Handler: index.handler
       Runtime: nodejs22.x
       Role: !GetAtt LambdaExecutionRole.Arn
       MemorySize: 4096
-      ReservedConcurrentExecutions: 8 # Limits concurrent executions to 8
+      ReservedConcurrentExecutions: 4 # Limits concurrent executions to 4
       Environment:
         Variables:
           TABLE_NAME: !Ref DistributedCounterTable
       Code:
         S3Bucket: localstack-lambda-artifacts # LocalStack will intercept this
-        S3Key: service-counter/index.zip # Path where the lambda is packaged
+        S3Key: service-insert-counter/index.zip # Path where the lambda is packaged
       Timeout: 50
 
-  ServiceCounterEventSourceMapping:
+  ServiceModifyCounterFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: service-modify-counter
+      Handler: index.handler
+      Runtime: nodejs22.x
+      Role: !GetAtt LambdaExecutionRole.Arn
+      MemorySize: 4096
+      ReservedConcurrentExecutions: 4 # Limits concurrent executions to 4
+      Environment:
+        Variables:
+          TABLE_NAME: !Ref DistributedCounterTable
+      Code:
+        S3Bucket: localstack-lambda-artifacts # LocalStack will intercept this
+        S3Key: service-modify-counter/index.zip # Path where the lambda is packaged
+      Timeout: 50
+
+  ServiceInsertEventSourceMapping:
     Type: AWS::Lambda::EventSourceMapping
     Properties:
       BatchSize: 50
       Enabled: true
       EventSourceArn: !GetAtt DistributedCounterTable.StreamArn
-      FunctionName: !GetAtt ServiceCounterFunction.Arn
+      FunctionName: !GetAtt ServiceInsertCounterFunction.Arn
       StartingPosition: TRIM_HORIZON
       FunctionResponseTypes:
         - ReportBatchItemFailure
       FilterCriteria:
         Filters:
-          - Pattern: '{"eventName":["INSERT","MODIFY"],"dynamodb":{"Keys":{"SK":{"S":[{"prefix":"SERVICE#"}]}}}}'
+          - Pattern: '{"eventName":["INSERT"],"dynamodb":{"Keys":{"SK":{"S":[{"prefix":"SERVICE#"}]}}}}'
+
+  ServiceModifyEventSourceMapping:
+    Type: AWS::Lambda::EventSourceMapping
+    Properties:
+      BatchSize: 50
+      Enabled: true
+      EventSourceArn: !GetAtt DistributedCounterTable.StreamArn
+      FunctionName: !GetAtt ServiceModifyCounterFunction.Arn
+      StartingPosition: TRIM_HORIZON
+      FunctionResponseTypes:
+        - ReportBatchItemFailure
+      FilterCriteria:
+        Filters:
+          - Pattern: '{"eventName":["MODIFY"],"dynamodb":{"Keys":{"SK":{"S":[{"prefix":"SERVICE#"}]}}}}'
