--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - SERVICES=dynamodb,lambda,s3,cloudformation,iam,logs,kinesis
       - DEBUG=0
       - PERSISTENCE=0
+      - DYNAMODB_OPTIMIZE_DB_BEFORE_STARTUP=1
+      - DYNAMODB_HEAP_SIZE=1G
     volumes:
       - "./docker-volumes/localstack:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
